--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
     "lint": "eslint src",
     "lint-fix": "eslint src --fix",
     "server": "servez -p 8083 --ssl"
+  },
+  "dependencies": {
+    "@playcanvas/pcui": "^4.1.2"
   }
 }
